--- a/app/src/main/res/layout/category_manage_layout.xml
+++ b/app/src/main/res/layout/category_manage_layout.xml
@@ -10,15 +10,13 @@
         android:padding="15dp"
         android:background="@color/colorPrimary">
 
-        <TextView
+        <ImageView
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:text="返回"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:src="@mipmap/ic_menu_back"/>
 
         <TextView
             android:id="@+id/tv_title"
@@ -28,23 +26,16 @@
             android:text="管理类别"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
+        <TextView
+            android:id="@+id/tv_add_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="＋ 添加类别"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
     </RelativeLayout>
-
-
-    <TextView
-        android:id="@+id/tv_add_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:text="@string/categorylist_header"
-        android:textSize="20sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="#888" />
 
     <ListView
         android:id="@+id/lv_category"
