--- a/app/src/main/res/layout/entry_add_layout.xml
+++ b/app/src/main/res/layout/entry_add_layout.xml
@@ -11,15 +11,13 @@
         android:padding="15dp"
         android:background="@color/colorPrimary">
 
-        <TextView
+        <ImageView
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:text="返回"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:src="@mipmap/ic_menu_back"/>
 
         <TextView
             android:id="@+id/tv_title"
@@ -30,107 +28,110 @@
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/tv_category_manage"
+        <ImageView
+            android:id="@+id/iv_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="+ 管理类别"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"  />
+            android:src="@mipmap/ic_menu_mark" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_padding_vertical"
-        android:paddingRight="@dimen/activity_padding_vertical">
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <LinearLayout
-            android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="选择类别："
+                android:textSize="20sp" />
             <Spinner
                 android:id="@+id/spinner_category"
-                android:layout_width="260dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_weight="1"
+                android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/tv_category_manage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button"
+                android:padding="5dp"
+                android:text="管理类别"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="金额："
+                android:textSize="20sp" />
             <EditText
                 android:id="@+id/et_amount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@android:color/transparent"
                 android:ems="10"
                 android:hint="0.00"
-                android:inputType="numberDecimal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingTop="10dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="@string/entry_add_time"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/tv_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="2016-5-11"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="13:30"
-                    android:textSize="18sp" />
-            </LinearLayout>
-
-
+                android:inputType="numberDecimal"/>
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/et_info"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_above="@+id/tv_add"
-            android:layout_below="@+id/ll"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/transparent"
-            android:gravity="start"
-            android:hint="@string/entry_add_info"
-            android:padding="5dp" />
-
-        <TextView
-            android:id="@+id/tv_add"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/button"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="@string/Entry_add_add"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-    </RelativeLayout>
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="时间："
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="2016-5-11"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="13:30"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="备注："
+                android:textSize="20sp" />
+            <EditText
+                android:id="@+id/et_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="备注详情" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
