--- a/app/src/main/res/layout/mainpage_entrylist_item.xml
+++ b/app/src/main/res/layout/mainpage_entrylist_item.xml
@@ -3,38 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="5dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
-    android:paddingTop="5dp">
+    android:padding="15dp">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-1000.00"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2016/05/10" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2016-05-10"
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/tv_category"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_weight="1"
-        android:gravity="center"
-        android:text="部落冲突"
-        android:textSize="22sp" />
+        android:text="xxxxx"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tv_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="-1000.00"
+        android:textSize="18sp"
+        android:textColor="@color/colorAccent"/>
 </LinearLayout>
