--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,16 @@
     <ListView
         android:id="@+id/lv_recent_entry"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/rl_top"
+        android:layout_above="@+id/main_output_btn"
         android:divider="@null" />
+
+    <Button
+        android:id="@+id/main_output_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="导出至excel"/>
 
 </RelativeLayout>
